@@ -15,6 +15,7 @@
 * The include() function can now include specific files
 * path.translate() now defaults to Windows-style backslashes
 * Added NoWarnings flag for Visual Studio (xpol)
+* Added debugcommand for Visual Studio (xpol)
 
 
 -------
